[tool.poetry]
name = "stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Robin Ghyselinck <rghyselinck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
